// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntrySidebar/TranslationWidgetDropdown when a locale has 1 error should match snapshot 1`] = `
<div>
  <Select
    id="optionSelect"
    onChange={[Function]}
    value="en-HK"
  >
    <Option
      key="en-HK"
      value="en-HK"
    >
      English (Hong Kong… (en-HK) - 1 error
    </Option>
    <Option
      key="ru"
      value="ru"
    >
      Russian (ru)
    </Option>
    <Option
      key="ar-AR"
      value="ar-AR"
    >
      Zhao (Azerbaijan) (zh)
    </Option>
  </Select>
</div>
`;

exports[`EntrySidebar/TranslationWidgetDropdown when a locale has more than one 1 error should match snapshot 1`] = `
<div>
  <Select
    id="optionSelect"
    onChange={[Function]}
    value="en-HK"
  >
    <Option
      key="en-HK"
      value="en-HK"
    >
      English (Hong Kong… (en-HK) - 2 errors
    </Option>
    <Option
      key="ru"
      value="ru"
    >
      Russian (ru)
    </Option>
    <Option
      key="ar-AR"
      value="ar-AR"
    >
      Zhao (Azerbaijan) (zh)
    </Option>
  </Select>
</div>
`;

exports[`EntrySidebar/TranslationWidgetDropdown when both locales have errors should match snapshot 1`] = `
<div>
  <Select
    id="optionSelect"
    onChange={[Function]}
    value="en-HK"
  >
    <Option
      key="en-HK"
      value="en-HK"
    >
      English (Hong Kong… (en-HK) - 2 errors
    </Option>
    <Option
      key="ru"
      value="ru"
    >
      Russian (ru) - 1 error
    </Option>
    <Option
      key="ar-AR"
      value="ar-AR"
    >
      Zhao (Azerbaijan) (zh)
    </Option>
  </Select>
</div>
`;

exports[`EntrySidebar/TranslationWidgetDropdown when there are no locale errors should match snapshot 1`] = `
<div>
  <Select
    id="optionSelect"
    onChange={[Function]}
    value="en-HK"
  >
    <Option
      key="en-HK"
      value="en-HK"
    >
      English (Hong Kong SAR China) (en-HK)
    </Option>
    <Option
      key="ru"
      value="ru"
    >
      Russian (ru)
    </Option>
    <Option
      key="ar-AR"
      value="ar-AR"
    >
      Zhao (Azerbaijan) (zh)
    </Option>
  </Select>
</div>
`;
